--- a/dls.html
+++ b/dls.html
@@ -2,12 +2,13 @@
 <html>
 <head>Downloads</head>
 <body bgcolor='#0000000'>
+<font color='white'>
 <h1>blood trickles down my legs</h1>
-<br>
 <a href='btdml demos.zip'>Download demos</a>
 <br>
 <a href='btdml ins.zip'>Download instrumentals</a>
 <br>
 <a href='btdml stems.zip'>Download stems</a>
+</font>
 </body>
 </html>
