--- a/dls.html
+++ b/dls.html
@@ -4,7 +4,7 @@
 <body bgcolor='#0000000'>
 <font color='white'>
 <h1>blood trickles down my legs</h1>
-<a href='btdml demos.zip'>Download demos</a>
+<a href='demos.html'>Download demos</a>
 <br>
 <a href='btdml ins.zip'>Download instrumentals</a>
 <br>
